spec/compile_errors/duplicate_transient_scoped.cr
require "../../src/hardwire"

class SpecialService
end

class Container
  include HardWire::Container

  transient SpecialService
  scoped SpecialService
end
